test/compile_fail/frozen_format_unmatched_brace2.cpp
#include "frozenchars.hpp"

int main() {
  constexpr auto x = frozenchars::frozen_format<"}">();
  (void)x;
  return 0;
}
